# plane-mcp

./: .env.example  .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose-v1.1.0.yml  docker-compose.yml  package.json  pyproject.toml
docs/: ARCHITECTURE.md  COPILOT_USAGE.md  INDEX.md  NPM_PUBLISH.md  PLANE_UPDATE.md  PUBLISH_QUICKSTART.md  RELEASE_NOTES.md  SSE_AUTH.md  SSE_CONNECTION_FIX.md  TROUBLESHOOTING.md  USAGE.md
scripts/: generate-auth-header.ps1  generate-auth-header.sh  install-python.js  test_after_update.py  test_api_endpoints.py  update_plane.sh
src/plane_mcp/: __init__.py  schemas.py  server.py
src/plane_mcp/common/: __init__.py  request_helper.py  version.py
src/plane_mcp/schemas/: __init__.py  base.py  cycle.py  issue.py  metadata.py  module.py  project.py  worklog.py
src/plane_mcp/tools/: __init__.py  cycle_issues.py  cycles.py  issues.py  metadata.py  module_issues.py  modules.py  projects.py  user.py  worklogs.py
