[project]
dependencies = [
  "mcp>=1.1.2",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]
description = "MCP server for Plane project management platform with SSE transport support"
name = "plane-mcp"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
plane-mcp = "plane_mcp.server:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.3.0",
]
